switching to using files from the resource directory